--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 APP_Name=kling.ai.video.chat
 CONTENT_BOX=D:\KlingAI\Task\Task1\image\content.png
+IMAGE_KLING_AI =D:\KlingAI\Task\Task1\image\icon.png
+IMAGE_TEXT_TO_VIDEO=D:\KlingAI\Task\Task1\image\texttovideo.png
+IMAGE_GENERATE=D:\KlingAI\Task\Task1\image\generate.png
